RESOLVED FIXED241790
Fix broken --useOSLog option.
https://bugs.webkit.org/show_bug.cgi?id=241790
Summary Fix broken --useOSLog option.
Mark Lam
Reported 2022-06-20 15:07:24 PDT
Internally, --useOSLog=0 is represented as OSLogType::None. Options::dumpAllOptionsInALine() dumps this value as "none". When "none" is later passed back top Options::setOption(), it is rejected because useOSLog's parse function wasn't expecting "none" as an input string. The fix is to simply add "none" to the list of allowed input strings.
Attachments
Mark Lam
Comment 1 2022-06-20 15:13:38 PDT
EWS
Comment 2 2022-06-20 17:03:04 PDT
Committed r295677 (251682@main): <https://commits.webkit.org/251682@main> Reviewed commits have been landed. Closing PR #1641 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-06-20 17:04:14 PDT
Note You need to log in before you can comment on or make changes to this bug.