Fix broken --useOSLog option. https://bugs.webkit.org/show_bug.cgi?id=241790

Reviewed by Alexey Shvayka.

Internally, --useOSLog=0 is represented as OSLogType::None.  Options::dumpAllOptionsInALine()
dumps this value as "none".  When "none" is later passed back to Options::setOption(), it is
rejected because useOSLog's parse function wasn't expecting "none" as an input string.  The
fix is simply to add "none" to the list of allowed input strings.

Also, since OSLogType::None is a thing, it makes sense that the option should allow value
"none".  This issue was manifesting as a failure when running testapi.

* Source/JavaScriptCore/runtime/Options.cpp:
(JSC::parse):

Canonical link: https://commits.webkit.org/251682@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295677 268f45cc-cd09-0410-ab3c-d52691b4dbfc